Update MinorGC.java
参数已过时